--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2795,7 +2795,16 @@ body {
 }
 
 .abode {
-
+  &__link{
+    color: $blue;
+    transition: all 0.3s ease 0s;
+    @media(any-hover: hover) {
+      &:hover {
+        color: #1bb6fd;
+        text-decoration: underline;
+      }
+    }
+  }
   &__description {
     margin-top: 50px;
     display: grid;
@@ -3730,5 +3739,101 @@ body {
 br.hide-on-mob{
   @media(max-width: $sm) {
     display: none;
+  }
+}
+
+.suggest {
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    @media(max-width: $md) {
+      gap: 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 30px;
+    }
+  }
+
+  &__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    @media(max-width: $md) {
+      grid-template-columns: 1fr;
+      gap: 30px;
+    }
+    @media(max-width: $sm) {
+      gap: 25px;
+    }
+  }
+
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 60px 50px 70px;
+    & hr{
+      background-color: $blue;
+      height: 2px;
+      width: 75px;
+      margin: 0 auto;
+    }
+    @media(max-width: 1230px) {
+      padding: 40px 30px;
+      gap: 30px;
+    }
+    @media(max-width: $sm) {
+      padding: 30px 20px;
+    }
+  }
+
+  &__top {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    text-align: center;
+  }
+
+  &__name {
+    color: $blue;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    @media(max-width: $sm) {
+      font-size: 18px;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    line-height: calc(30/18);
+    & ul{
+      padding-left: 0;
+      list-style: none;
+    }
+  }
+
+  &__button {
+    padding: 17px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: $blue;
+    transition: all 0.3s ease 0s;
+    border-radius: 10px;
+    max-width: 230px;
+    width: 100%;
+    margin: auto auto 0;
+    @media(any-hover: hover) {
+      &:hover {
+        background-color: #3695C0;
+      }
+    }
   }
 }
